--- a/WebProject/src/template/index.ejs
+++ b/WebProject/src/template/index.ejs
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>Element Vue Springboot CodeTemplate project</title>
+    <title>晓风轻 Element Vue Springboot 代码模板</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
