--- a/WebProject/src/template/index.ejs
+++ b/WebProject/src/template/index.ejs
@@ -6,6 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0px;
+        }
+    </style>
 </head>
 
 <body>
